syntax = "proto3";

// 命 令 号: 1002
// 命令名称: touch_hysteresis_time_set
// 命令描述: 设置触碰按下类型的迟滞时间
// 文件名称: dbc1002_tch_hysteresis_time_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbTouchHysteresisTimeSet";

message TouchHysteresisTimeSetRequest {
  // ATTR: REQUSET
  uint32 hysteresis_time = 1; //单位：ms
}

message TouchHysteresisTimeSetResponse {

}
